# swiftbar-imap-counter

./: .gitignore  ChangeLog  LICENSE  README.md  TODO  imap_counter.py  imap_counterrc.EXAMPLE  pre-commit.EXAMPLE  pyproject.toml
